src/index.css
:root {
  --gray30: hsl(0, 0%, 30%);
  --gray25: hsl(0, 0%, 25%);
  --gray60: hsl(0, 0%, 60%);
  --gray50: hsl(0, 0%, 50%);
  --gray40: hsl(0, 0%, 40%);
  --gray20: hsl(0, 0%, 20%);
  --white: hsl(0, 0%, 98%);
  --bluish-gray: hsl(240, 10%, 10%);
  --clef-size: 99px;
  --border: 2px solid var(--gray30);
  --green23: hsl(100, 100%, 23%);
  --green30: hsl(100, 100%, 30%);
  --green33: hsl(100, 100%, 33%);
  --green38: hsl(100, 100%, 38%);
  --red40: hsl(0, 100%, 40%);
  --red50: hsl(0, 100%, 50%);
  --red65: hsl(0, 100%, 65%);
  --red72: hsl(0, 100%, 72%);
  --orange40: hsl(30, 100%, 40%);
  --orange50: hsl(30, 100%, 50%);
  --orange60: hsl(30, 100%, 60%);
  --orange65: hsl(30, 100%, 65%);
  --yellow40: hsl(50, 100%, 40%);
  --yellow50: hsl(50, 100%, 50%);
  --yellow70: hsl(50, 100%, 70%);
  --yellow80: hsl(50, 100%, 80%);
  --cyan40: hsl(200, 100%, 40%);
  --cyan50: hsl(200, 100%, 50%);
  --cyan55: hsl(200, 100%, 55%);
  --cyan65: hsl(200, 100%, 65%);
  --blue40: hsl(220, 100%, 40%);
  --blue50: hsl(220, 100%, 50%);
  --blue55: hsl(220, 100%, 55%);
  --blue63: hsl(220, 100%, 63%);
  --purple40: hsl(280, 100%, 40%);
  --purple50: hsl(280, 100%, 50%);
  --purple60: hsl(280, 100%, 60%);
  --purple65: hsl(280, 100%, 65%);
  color: var(--bluish-gray);
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  overflow-x: hidden;
}

* {
  box-sizing: border-box;
}

body {
  width: 100vw;
  height: 100vh;
  margin: 0;
  padding: 15px;
  padding-bottom: 0;
}

#root {
  width: 100%;
  height: 100%;
  max-width: 700px;
  flex-direction: column;
}

.center {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.hidden {
  position: absolute;
  visibility: hidden;
  display: none;
}

hr {
  border: none;
  border-top: var(--border);
  margin: 24px;
}

p {
  margin: 0;
}

span {
  display: inline-block;
}

a {
  text-decoration: none;
}

h1 {
  background-image: linear-gradient(to right, var(--red50), var(--orange50), var(--yellow50), var(--green38), var(--cyan50), var(--blue50), var(--purple50));
  background-clip: text;
  -webkit-background-clip: text;
  color: transparent;
  font-size: 64px;
}

#staff {
  width: 100%;
  position: relative;
  top: 20px;
  border: var(--border);
  border-bottom: none;
  margin-bottom: 150px;
  z-index: 6;
  transform: translateY(30px);
}

#staff>hr {
  width: 100%;
  margin: 0;
  margin-top: 40px;
}

#staff>hr.ledger-line {
  position: absolute;
  width: 100px;
  z-index: -1;
  left: 50%;
  transform: translateX(50%);
}

#staff>hr#ledger-line2 {
  top: calc(41px * 5 + 5px);
}

#staff>hr#ledger-line-above {
  top: -84px;
}

.clef {
  position: absolute;
  font-size: var(--clef-size);
  height: var(--clef-size);
  line-height: var(--clef-size);
  left: 8px;
  user-select: none;
  -moz-user-select: none;
}

#treble-clef {
  height: 270px;
  top: -40px;
}

#bass-clef {
  height: 140px;
  top: 0;
}

.sharp-symbol,
.flat-symbol,
.double-sharp-symbol,
.double-flat-symbol {
  position: absolute;
  user-select: none;
  -moz-user-select: none;
}

.note {
  height: 40px;
  left: calc(60%);
  transform: translateX(-0%);
  position: absolute;
}

.note,
.sharp-symbol,
.flat-symbol .double-sharp-symbol,
.double-flat-symbol {
  top: 0;
}

.sharp-symbol,
.double-sharp-symbol {
  height: 100px;
  transform: translate(-120%, -35%);
}

.flat-symbol,
.double-flat-symbol {
  height: 80px;
  transform: translate(-100%, -50%);
}

.double-sharp-symbol {
  height: 24px;
}

.double-flat-symbol {
  height: 54px;
  left: calc(50% - 60px);
}

.note.c2,
.c2.sharp-symbol,
.c2.flat-symbol,
.c2.double-sharp-symbol,
.c2.double-flat-symbol {
  top: 231px;
}

.note.d2,
.d2.sharp-symbol,
.d2.flat-symbol,
.d2.double-sharp-symbol,
.d2.double-flat-symbol {
  top: 210px;
}

.note.c4,
.note.e2,
.c4.sharp-symbol,
.c4.flat-symbol,
.e2.sharp-symbol,
.e2.flat-symbol,
.e2.double-sharp-symbol,
.e2.double-flat-symbol,
.c4.double-sharp-symbol,
.c4.double-flat-symbol {
  top: calc(84px + 84px + 21px);
}

.note.d4,
.note.f2,
.d4.sharp-symbol,
.d4.flat-symbol,
.f2.sharp-symbol,
.f2.flat-symbol,
.f2.double-sharp-symbol,
.f2.double-flat-symbol,
.d4.double-sharp-symbol,
.d4.double-flat-symbol {
  top: calc(84px + 84px);
}

.note.e4,
.note.g2,
.e4.sharp-symbol,
.e4.flat-symbol,
.g2.sharp-symbol,
.g2.flat-symbol,
.e4.double-sharp-symbol,
.e4.double-flat-symbol,
.g2.double-sharp-symbol,
.g2.double-flat-symbol {
  top: calc(84px + 63px);
}

.note.f4,
.note.a2,
.f4.sharp-symbol,
.f4.flat-symbol,
.a2.sharp-symbol,
.a2.flat-symbol,
.a2.double-sharp-symbol,
.a2.double-flat-symbol,
.f4.double-sharp-symbol,
.f4.double-flat-symbol {
  top: calc(84px + 42px);
}

.note.g4,
.note.b2,
.g4.sharp-symbol,
.g4.flat-symbol,
.b2.sharp-symbol,
.b2.flat-symbol,
.b2.double-sharp-symbol,
.b2.double-flat-symbol,
.g4.double-sharp-symbol,
.g4.double-flat-symbol {
  top: calc(84px + 21px);
}

.note.a4,
.note.c3,
.a4.sharp-symbol,
.a4.flat-symbol,
.c3.sharp-symbol,
.c3.flat-symbol,
.c3.double-sharp-symbol,
.c3.double-flat-symbol,
.a4.double-sharp-symbol,
.a4.double-flat-symbol {
  top: 84px;
}

.note.b4,
.note.d3,
.b4.sharp-symbol,
.b4.flat-symbol,
.d3.sharp-symbol,
.d3.flat-symbol,
.d3.double-sharp-symbol,
.d3.double-flat-symbol,
.b4.double-sharp-symbol,
.b4.double-flat-symbol {
  top: calc(40px + 20px);
}

.note.e3,
.note.c5,
.e3.sharp-symbol,
.e3.flat-symbol,
.c5.sharp-symbol,
.c5.flat-symbol,
.c5.double-sharp-symbol,
.c5.double-flat-symbol,
.e3.double-sharp-symbol,
.e3.double-flat-symbol {
  top: 40px;
}

.note.f3,
.note.d5,
.f3.sharp-symbol,
.f3.flat-symbol,
.d5.sharp-symbol,
.d5.flat-symbol,
.f3.double-sharp-symbol,
.f3.double-flat-symbol,
.d5.double-sharp-symbol,
.d5.double-flat-symbol {
  top: 20px;
}

.note.g3,
.note.e5,
.g3.sharp-symbol,
.g3.flat-symbol,
.e5.sharp-symbol,
.e5.flat-symbol,
.e5.double-sharp-symbol,
.e5.double-flat-symbol,
.g3.double-sharp-symbol,
.g3.double-flat-symbol {
  top: 0px;
}
/* ... */

